--- a/public/links.html
+++ b/public/links.html
@@ -227,7 +227,7 @@ document.getElementById('showFormBtn').addEventListener('click', ()=>{ document.
 document.getElementById("logoutBtn").addEventListener("click", ()=>{
   sessionStorage.removeItem("loggedInAt_links");
   showToast("تم تسجيل الخروج بنجاح","success");
-  setTimeout(()=> window.location.href="index.html", 1200);
+  setTimeout(()=> window.location.href="dashboard.html", 1200);
 });
 
 // ⏪ العودة للوحة التحكم
