--- a/public/links.html
+++ b/public/links.html
@@ -10,7 +10,7 @@
   <style>
     body { background: linear-gradient(to right, #e0eafc, #cfdef3); font-family: 'Segoe UI', sans-serif; padding: 20px; transition: background 0.3s ease, color 0.3s ease; }
     .card { margin-bottom: 20px; }
-    table td, table th { vertical-align: middle; white-space: normal; } /* 🔹 يسمح بلف النص بدون Scroll */
+    table td, table th { vertical-align: middle; white-space: normal; }
     .action-buttons { display: flex; gap: 8px; justify-content: center; flex-wrap: wrap; }
     .toast-container { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 9999; }
     #loadingOverlay {
@@ -24,6 +24,17 @@
     body.dark-mode table, body.dark-mode .card { background:#1e1e1e; color:#ddd; }
     body.dark-mode .modal-content { background:#1e1e1e; color:#fff; }
     body.dark-mode .btn-close { filter: invert(1); }
+
+    /* 🎨 Tooltips محسّنة */
+    .custom-tooltip.bs-tooltip-auto[x-placement^=top],
+    .custom-tooltip.bs-tooltip-top {
+      --bs-tooltip-bg: #0d6efd;
+      --bs-tooltip-color: #fff;
+      font-size: 0.85rem;
+      padding: 6px 10px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    }
   </style>
 </head>
 <body>
@@ -58,23 +69,23 @@
       <input type="hidden" id="id" name="id">
       <div class="mb-3">
         <label class="form-label">الوصف</label>
-        <textarea id="description" name="description" class="form-control"></textarea>
+        <textarea id="description" name="description" class="form-control" data-bs-toggle="tooltip" title="أدخل وصف الرابط (اختياري)"></textarea>
       </div>
       <div class="mb-3">
         <label class="form-label">الرابط</label>
-        <input type="url" id="link" name="link" class="form-control" required>
+        <input type="url" id="link" name="link" class="form-control" required data-bs-toggle="tooltip" title="أدخل رابط صحيح (https://...)">
       </div>
       <div class="mb-3">
         <label class="form-label">نص الرابط</label>
-        <input type="text" id="linkText" name="linkText" class="form-control" required>
+        <input type="text" id="linkText" name="linkText" class="form-control" required data-bs-toggle="tooltip" title="النص الذي سيظهر كرابط للمستخدم">
       </div>
       <div class="form-check mb-3">
-        <input type="checkbox" id="requiresPassword" name="requiresPassword" class="form-check-input">
+        <input type="checkbox" id="requiresPassword" name="requiresPassword" class="form-check-input" data-bs-toggle="tooltip" title="حدد إذا كان الرابط يتطلب كلمة مرور">
         <label for="requiresPassword" class="form-check-label">يتطلب كلمة مرور</label>
       </div>
       <div class="d-flex gap-2">
-        <button type="button" id="saveBtn" class="btn btn-success">💾 حفظ</button>
-        <button type="button" id="cancelBtn" class="btn btn-secondary">❌ إلغاء</button>
+        <button type="button" id="saveBtn" class="btn btn-success" data-bs-toggle="tooltip" title="حفظ الرابط">💾 حفظ</button>
+        <button type="button" id="cancelBtn" class="btn btn-secondary" data-bs-toggle="tooltip" title="إلغاء العملية">❌ إلغاء</button>
       </div>
     </form>
 
@@ -156,20 +167,24 @@ function renderLinks(data) {
   data.forEach((link, index) => {
     table.innerHTML += `
       <tr>
-        <td>${index+1}</td>
-        <td>${link.description || ''}</td>
-        <td><a href="${link.link}" target="_blank">${link.linkText}</a></td>
-        <td>${link.requiresPassword ? '<i class="bi bi-lock-fill text-danger fs-5"></i>' : '<i class="bi bi-unlock-fill text-success fs-5"></i>'}</td>
+        <td data-bs-toggle="tooltip" title="رقم التسلسل">${index+1}</td>
+        <td data-bs-toggle="tooltip" title="الوصف">${link.description || ''}</td>
+        <td data-bs-toggle="tooltip" title="الرابط"><a href="${link.link}" target="_blank">${link.linkText}</a></td>
+        <td data-bs-toggle="tooltip" title="${link.requiresPassword ? '🔒 يتطلب كلمة مرور' : '🔓 غير محمي'}">
+          ${link.requiresPassword ? '<i class="bi bi-lock-fill text-danger fs-5"></i>' : '<i class="bi bi-unlock-fill text-success fs-5"></i>'}
+        </td>
         <td>
           <div class="action-buttons">
-            <i class="bi bi-pencil-square text-warning fs-5" style="cursor:pointer;" onclick='editLink(${JSON.stringify(link)})'></i>
-            <i class="bi bi-trash-fill text-danger fs-5" style="cursor:pointer;" onclick="prepareDelete('${link._id}')"></i>
-            <i class="bi bi-arrow-up-circle-fill text-info fs-5" style="cursor:pointer;" onclick="moveLink('${link._id}','up')"></i>
-            <i class="bi bi-arrow-down-circle-fill text-secondary fs-5" style="cursor:pointer;" onclick="moveLink('${link._id}','down')"></i>
+            <i class="bi bi-pencil-square text-warning fs-5" style="cursor:pointer;" data-bs-toggle="tooltip" title="تعديل الرابط" onclick='editLink(${JSON.stringify(link)})'></i>
+            <i class="bi bi-trash-fill text-danger fs-5" style="cursor:pointer;" data-bs-toggle="tooltip" title="حذف الرابط" onclick="prepareDelete('${link._id}')"></i>
+            <i class="bi bi-arrow-up-circle-fill text-info fs-5" style="cursor:pointer;" data-bs-toggle="tooltip" title="نقل لأعلى" onclick="moveLink('${link._id}','up')"></i>
+            <i class="bi bi-arrow-down-circle-fill text-secondary fs-5" style="cursor:pointer;" data-bs-toggle="tooltip" title="نقل لأسفل" onclick="moveLink('${link._id}','down')"></i>
           </div>
         </td>
       </tr>`;
   });
+
+  activateTooltips();
 }
 
 // ✏️ تعديل رابط
@@ -180,6 +195,7 @@ function editLink(link) {
   document.getElementById('linkText').value = link.linkText;
   document.getElementById('requiresPassword').checked = link.requiresPassword;
   document.getElementById('addLinkForm').style.display = 'block';
+  activateTooltips();
 }
 
 // 🗑️ تحضير الحذف
@@ -221,7 +237,6 @@ document.getElementById('cancelBtn').addEventListener('click', ()=>{
   document.getElementById('addLinkForm').reset();
   document.getElementById('addLinkForm').style.display='none';
 });
-document.getElementById('showFormBtn').addEventListener('click', ()=>{ document.getElementById('addLinkForm').style.display='block'; });
 
 // 🔴 تسجيل خروج
 document.getElementById("logoutBtn").addEventListener("click", ()=>{
@@ -241,11 +256,20 @@ document.getElementById("themeToggle").addEventListener("click", ()=>{
   else icon.classList.replace("bi-brightness-high-fill","bi-moon-stars-fill");
 });
 
+// ✅ تفعيل Tooltips لجميع العناصر
+function activateTooltips() {
+  [...document.querySelectorAll('[data-bs-toggle="tooltip"]')].forEach(el=>{
+    new bootstrap.Tooltip(el,{
+      trigger:'hover focus',
+      placement:'top',
+      customClass:'custom-tooltip',
+      delay:{show:300, hide:150}
+    });
+  });
+}
+
 // 🚀 عند التحميل
-document.addEventListener("DOMContentLoaded", ()=>{
-  loadLinks();
-  [...document.querySelectorAll('[data-bs-toggle="tooltip"]')].forEach(el=> new bootstrap.Tooltip(el));
-});
+document.addEventListener("DOMContentLoaded", ()=>{ loadLinks(); activateTooltips(); });
 </script>
 </body>
 </html>
