--- a/public/links.html
+++ b/public/links.html
@@ -256,14 +256,19 @@ document.getElementById("themeToggle").addEventListener("click", ()=>{
   else icon.classList.replace("bi-brightness-high-fill","bi-moon-stars-fill");
 });
 
-// ✅ تفعيل Tooltips لجميع العناصر (بما فيها اللمس على الموبايل)
+// ✅ تفعيل Tooltips لجميع العناصر + إغلاق تلقائي بعد ثانيتين عند اللمس
 function activateTooltips() {
   [...document.querySelectorAll('[data-bs-toggle="tooltip"]')].forEach(el=>{
-    new bootstrap.Tooltip(el,{
-      trigger:'hover focus click', // 🟢 الآن يعمل مع hover + focus + click (للموبايل)
+    const tooltip = new bootstrap.Tooltip(el,{
+      trigger:'hover focus click',
       placement:'top',
       customClass:'custom-tooltip',
       delay:{show:300, hide:200}
+    });
+
+    // ⏱️ إغلاق تلقائي بعد 2 ثانية عند النقر (موبايل)
+    el.addEventListener("click", ()=>{
+      setTimeout(()=> tooltip.hide(),2000);
     });
   });
 }
