--- a/public/index.html
+++ b/public/index.html
@@ -109,18 +109,32 @@
 
 <nav id="mainNavbar" class="navbar navbar-expand-lg sticky-top shadow-sm">
   <div class="container-fluid">
+    <!-- ✅ زر ☰ يجي أولاً على اليمين -->
+    <button class="navbar-toggler text-white border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- ✅ الشعار بجانبه مباشرة -->
+    <a class="navbar-brand text-white fw-bold d-flex align-items-center me-2" href="#">
+      <i class="bi bi-collection-play-fill fs-4 me-1"></i> Video Dashboard
+    </a>
+
+    <!-- ✅ روابط القائمة -->
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link text-white fw-semibold" href="#" onclick="requestDashboardAccess()"><i class="bi bi-shield-lock-fill fs-5"></i> لوحة التحكم</a></li>
         <li class="nav-item"><a class="nav-link text-white fw-semibold" href="https://video-dashboard-backend.onrender.com/viewlinks.html"><i class="bi bi-link-45deg fs-5"></i> روابط مهمة</a></li>
-        <li class="nav-item" id="logoutNavItem" style="display:none;"><a class="nav-link text-white fw-semibold" href="#" onclick="logout()"><i class="bi bi-box-arrow-right fs-5"></i> تسجيل الخروج</a></li>
+        <li class="nav-item" id="logoutNavItem" style="display:none;">
+          <a class="nav-link text-white fw-semibold" href="#" onclick="logout()"><i class="bi bi-box-arrow-right fs-5"></i> تسجيل الخروج</a>
+        </li>
       </ul>
     </div>
-    <a class="navbar-brand text-white fw-bold ms-auto d-flex align-items-center" href="#"><i class="bi bi-collection-play-fill fs-4 me-1"></i> Video Dashboard</a>
-    <button class="navbar-toggler text-white border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"><span class="navbar-toggler-icon"></span></button>
+
+    <!-- ✅ زر الوضع الليلي -->
     <button id="themeToggle" class="btn btn-sm btn-outline-light ms-2"><i class="bi bi-moon-stars-fill"></i></button>
   </div>
 </nav>
+
 
 <div class="container text-center">
   <h3 class="my-3 fw-bold">🎥 اختر القسم لعرض الفيديوهات</h3>
