--- a/public/add_evaluation.html
+++ b/public/add_evaluation.html
@@ -39,15 +39,15 @@
         <h6>التقييم التفصيلي</h6>
         <div class="row">
           <div class="col-md-6 mb-3"><label class="form-label">قرار التشكيل</label><input type="number" step="0.25" min="0" class="form-control score" name="formation_decision"></div>
-          <div class="col-md-6 mb-3"><label class="form-label">خطة العمل</label><input type="number" step="0.25" min="0" class="form-control score" name="work_plan"></div>
-          <div class="col-md-6 mb-3"><label class="form-label">مؤشرات الأداء</label><input type="number" step="0.25" min="0" class="form-control score" name="performance_indicators"></div>
+          <div class="col-md-6 mb-3"><label class="form-label">خطة عمل اللجنة</label><input type="number" step="0.25" min="0" class="form-control score" name="work_plan"></div>
+          <div class="col-md-6 mb-3"><label class="form-label">مؤشرات أداء خطة عمل اللجنة قابلة للقياس</label><input type="number" step="0.25" min="0" class="form-control score" name="performance_indicators"></div>
           <div class="col-md-6 mb-3"><label class="form-label">عدد الاجتماعات</label><input type="number" step="0.25" min="0" class="form-control score" name="meetings"></div>
-          <div class="col-md-6 mb-3"><label class="form-label">الاتساق</label><input type="number" step="0.25" min="0" class="form-control score" name="consistency"></div>
-          <div class="col-md-6 mb-3"><label class="form-label">تغطية الكتب</label><input type="number" step="0.25" min="0" class="form-control score" name="coverage_books"></div>
-          <div class="col-md-4 mb-3"><label class="form-label">تقرير 1</label><input type="number" step="0.25" min="0" class="form-control score" name="report1"></div>
-          <div class="col-md-4 mb-3"><label class="form-label">تقرير 2</label><input type="number" step="0.25" min="0" class="form-control score" name="report2"></div>
-          <div class="col-md-4 mb-3"><label class="form-label">تقرير 3</label><input type="number" step="0.25" min="0" class="form-control score" name="report3"></div>
-          <div class="col-md-6 mb-3"><label class="form-label">التحليل الإحصائي</label><input type="number" step="0.25" min="0" class="form-control score" name="statistical_analysis"></div>
+          <div class="col-md-6 mb-3"><label class="form-label">التوافق بين الدعوات والاجتماعات</label><input type="number" step="0.25" min="0" class="form-control score" name="consistency"></div>
+          <div class="col-md-6 mb-3"><label class="form-label">كتب التغطية</label><input type="number" step="0.25" min="0" class="form-control score" name="coverage_books"></div>
+          <div class="col-md-4 mb-3"><label class="form-label">تقرير إنجاز 1</label><input type="number" step="0.25" min="0" class="form-control score" name="report1"></div>
+          <div class="col-md-4 mb-3"><label class="form-label">تقرير إنجاز 2</label><input type="number" step="0.25" min="0" class="form-control score" name="report2"></div>
+          <div class="col-md-4 mb-3"><label class="form-label">تقرير إنجاز 3</label><input type="number" step="0.25" min="0" class="form-control score" name="report3"></div>
+          <div class="col-md-6 mb-3"><label class="form-label">تقييم أداء اللجنة (التحليل الإحصائي)</label><input type="number" step="0.25" min="0" class="form-control score" name="statistical_analysis"></div>
         </div>
       </div>
 
